--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pandas==1.4.2
-streamlit==1.13.0
-plotly==5.10.0
-matplotlib==3.6.2
+streamlit==1.35.0
+pandas==2.2.2
+numpy==1.24.4
+matplotlib==3.7.5
+plotly==5.22.0
